# kamping-label-propagation

./: .gitmodules  CMakeLists.txt  base_label_propagation.cc  base_label_propagation.h  build.sh  eval.R  kaminpar_label_propagation.cc  kaminpar_label_propagation.h  kamping_dispatch_label_propagation.cc  kamping_dispatch_label_propagation.h  kamping_label_propagation.cc  kamping_label_propagation.h  kamping_sparse_label_propagation.cc  kamping_sparse_label_propagation.h  label_propagation.suite.yaml  logs2results.sh  main.cc  mpi_label_propagation.cc  mpi_label_propagation.h  parse_logfile.awk  rating_map_backyard.h
